# mysqlftppc-bigram

./: AUTHORS  COPYING  INSTALL  Makefile.am  README  buffer.cpp  buffer.h  configure.in  ftbool.c  ftbool.h  ftnorm.c  ftnorm.h  ftstring.c  ftstring.h  mempool.cpp  mempool.h  mysql-5.1.28-rc.patch  mysqldep.h  plugin_bigram.c  plugin_bigram.cpp  plugin_bigram.h  reader.cpp  reader.h  reader_bool.cpp  reader_bool.h
test/: test.sh  test.sql
